crates/squawk_linter/src/rules/snapshots/squawk_linter__rules__prefer_timestamptz__test__create_table_with_timestamp_err.snap
---
source: crates/squawk_linter/src/rules/prefer_timestamptz.rs
expression: errors
---
[
    Violation {
        code: PreferTimestampTz,
        message: "When Postgres stores a datetime in a `timestamp` field, Postgres drops the UTC offset. This means 2019-10-11 21:11:24+02 and 2019-10-11 21:11:24-06 will both be stored as 2019-10-11 21:11:24 in the database, even though they are eight hours apart in time.",
        text_range: 43..52,
        messages: [],
    },
    Violation {
        code: PreferTimestampTz,
        message: "When Postgres stores a datetime in a `timestamp` field, Postgres drops the UTC offset. This means 2019-10-11 21:11:24+02 and 2019-10-11 21:11:24-06 will both be stored as 2019-10-11 21:11:24 in the database, even though they are eight hours apart in time.",
        text_range: 99..126,
        messages: [],
    },
]
